# zarya-common

./: README.md  meson.build  meson_options.txt
backgrounds/: meson.build
debian/: changelog  control  rules  zarya-common-backgrounds.install  zarya-common-defaults.install  zarya-common-gnome-shell.alternatives  zarya-common-gnome-shell.install  zarya-common-gtk.install  zarya-common-plymouth.install  zarya-common-plymouth.postinst
gnome-shell/src/: gnome-shell-high-contrast.scss  gnome-shell.scss.in  meson.build
gnome-shell/src/data/: gnome-shell-theme.gresource.xml
gnome-shell/src/gnome-shell-sass/: _colors.scss  _common.scss  _drawing.scss  _palette.scss  _widgets.scss
gnome-shell/src/gnome-shell-sass/widgets/: _app-grid.scss  _calendar.scss  _dash.scss  _dialogs.scss  _login-lock.scss  _looking-glass.scss  _message-list.scss  _misc.scss  _popovers.scss  _quick-settings.scss  _screenshot.scss  _search-entry.scss  _slider.scss  _switcher-popup.scss  _workspace-thumbnails.scss
gnome-shell/src/gnome-shell-upstream-sass/widgets/: _search-entry.scss
gtk/: meson.build
gtk/src/: index.theme.in  meson.build  post_install.py
gtk/src/data/: gtk-dark.css.in  gtk.css.in  gtk.gresource.xml.in
gtk/src/default/gtk-4.0/: _defaults.scss
icons/: meson.build
icons/Adwaita/: index.theme
icons/meson/: post_install.py
plymouth/: meson.build
plymouth/zarya-bgrt/: meson.build  zarya-bgrt.plymouth.desktop
plymouth/zarya-text/: meson.build  zarya-text.plymouth
sessions/: THEMENAME-xorg.desktop.in  THEMENAME.desktop.in  THEMENAME.gschema.override.in  meson.build  mode.json.in
